--- a/app/assets/stylesheets/_yomobi.params.sass
+++ b/app/assets/stylesheets/_yomobi.params.sass
@@ -12,9 +12,12 @@ $blue: #43a8c7
 $peach: #f7d399
 $grey: #565757
 $charcoal: #2D2A2A
-$input_text_border_color: #e7e9d7
+
+$input-text-border-color: #e7e9d7
 $good: #287f01
 $bad: #be0026
+$rightcol-bgcolor: #f7d399
+$rightcol-stopcolor: #ffeac7
 
 // Font-faces
 +font-family("SecondaSoft", "SecondaSoft-Normal", $fw-normal, normal)
