--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -249,7 +249,7 @@ a,
   & > .rightcol
     & > .pane
       +margin-trailer(2)
-      padding-left: 3.5%
+      //padding-left: 3.5%
       .i10n
         +margin-trailer(1)
       img
@@ -291,11 +291,7 @@ a,
       text-align: center
       text-transform: uppercase
       text-shadow: 0px 2px 3px #555
-      -webkit-border-radius: 5px
-      -moz-border-radius: 5px
-      -ms-border-radius: 5px
-      -o-border-radius: 5px
-      border-radius: 5px
+      +border-radius(5px)
       &:hover
         background-color: $dark-orange
     .row, 
@@ -431,12 +427,8 @@ a,
       margin-bottom: 25px
       padding: 15px 3.3% 15px 3.3%
       width: 91%
-      -webkit-border-radius: 16px
-      -moz-border-radius: 16px
-      -ms-border-radius: 16px
-      -o-border-radius: 16px
-      border-radius: 16px
-      .title
+      +border-radius(16px)
+     .title
         @extend h3
       .i10n
         +hidden-320
@@ -497,7 +489,7 @@ a,
     font-size: 15px
     text-transform: none
     margin: 3px 0px 10px 0px
-    border: 1px solid $input_text_border_color
+    border: 1px solid $input-text-border-color
   input[type="submit"]
     text-decoration: none
     cursor: pointer
@@ -512,11 +504,7 @@ a,
     text-align: center
     text-transform: uppercase
     text-shadow: 0px -1px 3px #555
-    -webkit-border-radius: 5px
-    -moz-border-radius: 5px
-    -ms-border-radius: 5px
-    -o-border-radius: 5px
-    border-radius: 5px
+    +border-radius(5px)
   textarea
     resize: none
     width: 430px
@@ -525,7 +513,7 @@ a,
     font-size: 15px
     text-transform: none
     margin: 3px 0px 10px 0px
-    border: 1px solid $input_text_border_color
+    border: 1px solid $input-text-border-color
   .error_msg
     color: red
     padding: 0px 15px
