--- a/app/assets/stylesheets/_yomobi.layout.sass
+++ b/app/assets/stylesheets/_yomobi.layout.sass
@@ -42,7 +42,7 @@
     background-image: -o-linear-gradient(left , $rightcol-bgcolor 10%, $rightcol-stopcolor 50%, $rightcol-bgcolor 90%)
     background-image: -moz-linear-gradient(left , $rightcol-bgcolor 10%, $rightcol-stopcolor 50%, $rightcol-bgcolor 90%)
     background-image: -webkit-linear-gradient(left , $rightcol-bgcolor 10%, $rightcol-stopcolor 50%, $rightcol-bgcolor 90%)
-    background-image: -ms-linear-gradient(left , $rightcol-bgcolor 10%, $rightcol-stopcolor 50%, $rightcol-bgcolor 90%);
+    background-image: -ms-linear-gradient(left , $rightcol-bgcolor 10%, $rightcol-stopcolor 50%, $rightcol-bgcolor 90%)
     background-image: -webkit-gradient(linear, left top, right top, color-stop(0.1, $rightcol-bgcolor), color-stop(0.5, $rightcol-stopcolor), color-stop(0.9, $rightcol-bgcolor))
 
 #content-top-wrap
