Updated padding for rightcol in _cdd.responsive.sass and _yomobi.layout.sass

--- a/app/assets/stylesheets/_yomobi.layout.sass
+++ b/app/assets/stylesheets/_yomobi.layout.sass
@@ -35,7 +35,7 @@
     margin-right: 0
     padding-right: 0.88%
   & > .rightcol
-    +col(4, 10)
+    +col(4, 20px)
     +border-radius(32px)
     background: $rightcol-bgcolor
     background-image: linear-gradient(left , $rightcol-bgcolor 10%, $rightcol-stopcolor 50%, $rightcol-bgcolor 90%)
