Site Manager - Add New Site dialog is broken

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -8,7 +8,7 @@ html lang="en-US"
     = render 'shared/meta'
 
     = stylesheet_link_tag '/stylesheets/signup-app'
-    = stylesheet_link_tag '/flick/jquery-ui-1.8.11.custom'
+    = stylesheet_link_tag '/stylesheets/flick/jquery-ui-1.8.11.custom'
     = yield :css
     = csrf_meta_tag
   body
