Updated menu links in signup and signin pages

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -254,6 +254,7 @@ a,
         +margin-trailer(1)
       img
         max-width: 100%
+        border: 1px solid $grey
       .title
         @extend h2
       .link
@@ -270,12 +271,15 @@ a,
     .mobile-matters
       text-align: center
       h2
-        margin-top: 0.6em
+        margin: 0
       h3
         line-height: 1.5em
       img
         width: 80%
         margin: auto
+    .blog-categories
+      title
+        margin-top: 0
   
   .test-drive
     margin: 0px 1%
