--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -3,7 +3,7 @@
     <ul>
       <li class="link first"><a href="/"><%= t 'links.home' %></a></li>
       <li class="link " id="plans-link"><a href="/plans"><span></span><%= t 'links.plans' %></a></li>
-      <li class="link " id="how-it-works-link"><a href="/how-it-works"><span></span><%= t 'links.how_it_works' %></a></li>
+      <li class="link " id="compare-link"><a href="/mobile-comparison"><span></span><%= t 'links.compare' %></a></li>
       <li class="link " id="mobile-matters-link"><a href="/mobile-matters"><span></span><%= t 'links.mobile_matters' %></a></li>
       <li class="link " id="blog-link"><a href="/blog"><span></span><%= t 'links.blog' %></a></li>
       <li class="link last" id="contact-link"><a href="/contact"><span></span><%= t 'links.contact' %></a></li>
