--- a/app/views/layouts/application_loco.slim
+++ b/app/views/layouts/application_loco.slim
@@ -47,7 +47,7 @@ html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0"
             .user-menu
               .content
                 ul
-                   li.first
+                  li.first
                     a[href="/users/sign_up"]= t 'sign_up.sign_up'
                   li
                     a[href="/about-us"]= t 'links.about'
@@ -68,6 +68,9 @@ html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0"
                   li.twitter
                     a[href="https://twitter.com/youmobilized"]
                       | Twitter
+/                  li.last.youtube
+/                    a[href="#"]
+/                      | Youtube
         = render 'shared/main_menu'
       #content-wrap
         #content-middle-wrap
