Removed reference to YouTube in application_loco.slim

--- a/app/views/layouts/application_loco.slim
+++ b/app/views/layouts/application_loco.slim
@@ -65,12 +65,9 @@ html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0"
                   li.first.facebook
                     a[href="https://facebook.com/yomobi"]
                       | Facebook
-                  li.twitter
+                  li.last.twitter
                     a[href="https://twitter.com/youmobilized"]
                       | Twitter
-/                  li.last.youtube
-/                    a[href="#"]
-/                      | Youtube
         = render 'shared/main_menu'
       #content-wrap
         #content-middle-wrap
