--- a/app/assets/stylesheets/_yomobi.header.sass
+++ b/app/assets/stylesheets/_yomobi.header.sass
@@ -33,7 +33,7 @@
     letter-spacing: -.31em
     word-spacing: -.43em
     li
-      +adjust-font-size-to(15px)
+      font-size: 15px
       border-right: 1px solid $white
       display: inline-block
       font-family: $sans-serif
