--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -194,7 +194,8 @@ p.success {
       height: 23px;
       padding: 7px 10px 0;
       color: white;
-      font-weight: bold;
+      letter-spacing: 1px;
+      font-weight: normal;
       text-decoration: none; }
     #header.signed-in #nav a:hover {
       margin: 0px -1px;
@@ -320,7 +321,7 @@ p.success {
   #recaptcha_container a {
     color: inherit;
     position: relative;
-    top: 3px;
+    top: 0px;
     font-size: 10px; }
   #recaptcha_container #recaptcha_response_field {
     width: 220px !important; }
