--- a/app/assets/stylesheets/_yomobi.header.sass
+++ b/app/assets/stylesheets/_yomobi.header.sass
@@ -34,6 +34,7 @@
     word-spacing: -.43em
     li
       font-size: 15px
+      margin: 2px 0px
       border-right: 1px solid $white
       display: inline-block
       font-family: $sans-serif
