--- a/app/views/test_drives/new.html.slim
+++ b/app/views/test_drives/new.html.slim
@@ -3,10 +3,13 @@ div.test-drive
   p= button_to t('testdrive.begin_btn'), test_drive_path
   div.row.1
   	h3 =t('testdrive.header')
+    br
+    br
+    img.sign src="https://s3.amazonaws.com/yomobi-marketing/images/test-drive-2.png" 
   	p 
-  	  img.test-drive src="https://s3.amazonaws.com/yomobi-marketing/images/test-drive-2.png" 
   	  ==t('testdrive.explanation')
 
   div.row.2
+    h4 =t('testdrive.signup_link')
     p
   	  img src="https://s3.amazonaws.com/yomobi-marketing/images/test-drive-signup.png" 
