--- a/app/views/test_drives/new.html.slim
+++ b/app/views/test_drives/new.html.slim
@@ -2,14 +2,13 @@ div.test-drive
   h2 =t('testdrive.title')
   p= button_to t('testdrive.begin_btn'), test_drive_path
   div.row.1
-  	h3 =t('testdrive.header')
+    h3 =t('testdrive.header')
     br
     br
     img.sign src="https://s3.amazonaws.com/yomobi-marketing/images/test-drive-2.png" 
-  	p 
-  	  ==t('testdrive.explanation')
+    p ==t('testdrive.explanation')
 
   div.row.2
     h4 =t('testdrive.signup_link')
-    p
-  	  img src="https://s3.amazonaws.com/yomobi-marketing/images/test-drive-signup.png" 
+    br
+    img src="https://s3.amazonaws.com/yomobi-marketing/images/test-drive-signup.png" 
