Test drive page design work

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -287,7 +287,7 @@ a,
       text-decoration: none
       cursor: pointer
       background-color: $orange
-      padding: 5px 10px
+      padding: 8px 10px
       color: white
       border: 0px
       letter-spacing: .1em
@@ -301,16 +301,19 @@ a,
         background-color: $dark-orange
     .row, 
     .row-1
-      display: table-row
-      margin-top: 15px
+      display: block
+      margin-top: 40px
+      width: 600px
     .sign
-      margin: 0px 12px 12px 0px
+      margin: 0px 12px 0px 0px
       float: left
       width: 256px
+    .signup-link
+      width: 600px
     p
       text-align: justify
-      width: 70%
-      +adjust-font-size-to(15px)
+      font-size: 15px
+      line-height: 24px
         
   .mobile-matters
     ol
