--- a/app/views/test_drives/new.html.slim
+++ b/app/views/test_drives/new.html.slim
@@ -1,14 +1,14 @@
 div.test-drive
   h2 =t('testdrive.title')
   p= button_to t('testdrive.begin_btn'), test_drive_path
+  br
+  br
   div.row.1
-    h3 =t('testdrive.header')
-    br
+    h4 =t('testdrive.header')
     br
     img.sign src="https://s3.amazonaws.com/yomobi-marketing/images/test-drive-2.png" 
     p ==t('testdrive.explanation')
 
   div.row.2
-    h4 =t('testdrive.signup_link')
-    br
-    img src="https://s3.amazonaws.com/yomobi-marketing/images/test-drive-signup.png" 
+    h5 =t('testdrive.signup_link')
+    img.signup-link src="https://s3.amazonaws.com/yomobi-marketing/images/test-drive-signup.png" 
