--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -223,7 +223,7 @@ p.success {
       padding: 7px 10px 0;
       color: white;
       letter-spacing: 1px;
-      font-weight: normal;
+      font-weight: bold;
       text-decoration: none; }
     a:hover {
       margin: 0px -1px; 
