--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -333,7 +333,16 @@ a,
         border: 4px solid #DEDEB4
         padding: 10px
         margin-top: 15px
-
+  .terms
+    ol
+      list-style: inherit
+      list-style-type: decimal
+      font-size: 14px
+      margin: 1em 2em
+    li
+      padding: 4px 0px
+      line-height: 1.5em
+  
 .plans,
 .fees
   +clearfix
