--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -195,7 +195,7 @@ p.success {
       padding: 7px 10px 0;
       color: white;
       letter-spacing: 1px;
-      font-weight: normal;
+      font-weight: bold;
       text-decoration: none; }
     #header.signed-in #nav a:hover {
       margin: 0px -1px;
