Added member sign in text

--- a/app/views/layouts/application_loco.slim
+++ b/app/views/layouts/application_loco.slim
@@ -58,7 +58,7 @@ html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0"
                   li.last
                     a[href="?locale=es"]= t 'links.language.es'
             .btn-img
-              a[href="/users/sign_in"]= t 'sign_in.sign_in'
+              a[href="/users/sign_in"]= t 'sign_in.member_sign_in'
             .social-menu
               .content
                 ul.menu
