--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -31,6 +31,7 @@ html lang="en-US"
       #page-container
         #sidebar
           = yield :sidebar
+          '&nbsp;'
         #content
           = yield
         .clearfix
