Extraneous character in the account-setup pages

--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -31,7 +31,7 @@ html lang="en-US"
       #page-container
         #sidebar
           = yield :sidebar
-          '&nbsp;'
+          == '&nbsp;'
         #content
           = yield
         .clearfix
