--- a/app/assets/stylesheets/_yomobi.header.sass
+++ b/app/assets/stylesheets/_yomobi.header.sass
@@ -9,11 +9,18 @@
     text-decoration: none
   .btn-img
     float: left
-    margin-left: 23%
+    margin-left: 4px
   & > .leftcol
     +logo(50px, 223px)
   .rightcol
     margin-bottom: 10px
+
+  .menu-table
+    float: right
+    +margin-leader(2)
+    +margin-leader(1)
+    td.first-row
+      padding-bottom: 15px
 
 .logo
   +margin-leader(1.5)
@@ -59,7 +66,7 @@
 .social-menu
   +social-menu(40px, 40px, "social-menu-bg.png", 10px)
   float: right
-  margin: -3px 0 0 2%
+  margin: 0 0 0 2%
   li
     &.twitter
       background-position: 0 -40px
