Pages have the wrong header and footer https://www.pivotaltracker.com/projects/627041#!/stories/40887485

--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -215,7 +215,7 @@ ul.language-bar {
   margin-top: 10px; }
 #signup-box td, #actual-signin-box td {
   padding-bottom: 5px; }
-#signup-box label, #actual-signin-box label, #signup-box .label, #actual-signin-box .label {
+#signup-box label, #actual-signin-box label, #signup-box .label, #actual-signin-box .label, #new-pass-form .label {
   font-weight: bold;
   font-size: 1.2em;
   float: right;
