Updated CSS for yomobi.header.sass

--- a/app/assets/stylesheets/_yomobi.header.sass
+++ b/app/assets/stylesheets/_yomobi.header.sass
@@ -9,7 +9,7 @@
     text-decoration: none
   .btn-img
     float: left
-    margin-left: 4px
+    margin-left: 30%
   & > .leftcol
     +logo(50px, 223px)
   .rightcol
