--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -184,6 +184,7 @@ p.success {
     height: 30px;
     border: 1px solid #566986;
     border-bottom: none;
+    background: #5C9354;
     background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5C9354), color-stop(100%, #96CB81));
     background-image: -webkit-linear-gradient(#5C9354,#96CB81);
     background-image: -moz-linear-gradient(#5C9354,#96CB81);
