Various CSS fixes: signup.css, app.css, yomobi.screen.sass

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -88,8 +88,9 @@ a,
 .bad
   color: $bad
 
-#close-topline-notice
-  color: $charcoal
+#close-topline-notice 
+  a
+    color: $charcoal
 
 .node
   ul,
