--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -136,6 +136,15 @@ p {
   form { padding-top: 12px; }
 }
 
+a, a:visited {
+  color: #3b599a;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 a img {
   border: none; }
 
@@ -258,6 +267,7 @@ p.success {
   margin: 20px auto;
   padding: 10px 20px;
   h2 {
+    font-size: 1.5em;
     border-bottom: 1px solid #cccccc;
     padding-bottom: 4px;
     margin: 5px 0 5px 0; }
