CSS Fixes for Signup Error message

--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -161,7 +161,7 @@
           br
           br
           input type="checkbox" name="terms"
-            a href="payment_terms" target="ymhelp" = t 'site_manager.i_agree'
+            a href="/payment_terms" target="ymhelp" = t 'site_manager.i_agree'
           input type="submit" value=t('javascript_builder.continue')
       .error.hide
 
