Added font-size to _yomobi.header.sass to fix font size difference
There was a font size difference between the locomotive cms header and
the signin / signup header and I think it's because the font sizes are
relative - in em - and the baseline for the two headers was not the
same. By adding a fixed font-size, it should make the baseline the same
for both.

--- a/app/assets/stylesheets/_yomobi.header.sass
+++ b/app/assets/stylesheets/_yomobi.header.sass
@@ -1,5 +1,6 @@
 #header-wrap
   background: url('/assets/header-bg.png') $blue repeat-x center bottom
+  font-size: 10px
   //height: 180px
   padding-bottom: 71px
   
