Fixed links in logged in footer. Added spacer between radio buttons in "Create New Site"

--- a/app/views/shared/_footer-links.html.erb
+++ b/app/views/shared/_footer-links.html.erb
@@ -1,7 +1,7 @@
 <div class="site-links">
-  <a href="/about"><%=t'links.about'%></a>    <span class="dot">&middot;</span>
+  <a href="/about-us"><%=t'links.about'%></a>    <span class="dot">&middot;</span>
   <a href="/privacy"><%=t'links.privacy'%></a>  <span class="dot">&middot;</span>
   <a href="/terms"><%=t'links.terms'%></a>    <span class="dot">&middot;</span>
-  <a href="mailto:support@yomobi.com"><%=t'links.feedback'%></a> <span class="dot">&middot;</span>
+  <a href="/contact"><%=t'links.feedback'%></a> <span class="dot">&middot;</span>
   <a href="http://help.yomobi.com" target="_blank"><%=t'links.help'%></a>
 </div>
