--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -272,6 +272,7 @@
         br
         br
         input type="radio" name="create_type" value="type" =t('new_site.new_site_choice')
+        span.hspacer &nbsp;
         input type="radio" name="create_type" value="source" =t('new_site.copy_site_choice')
 
         .site-type
