--- a/public/stylesheets/sass/signup.scss
+++ b/public/stylesheets/sass/signup.scss
@@ -284,6 +284,7 @@ ul.language-bar {
     border: 1px solid #dd3c10;
     background: #ffebe8;
     b {
+      font-weight: bold;
       font-size: 13px; }
     a, a:visited {
       color: #dd3c10; } } }
