--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -257,6 +257,7 @@ ul.language-bar {
   border: 1px solid #dd3c10;
   background: #ffebe8; }
   #signin-box .login-error b {
+    font-weight: bold;
     font-size: 13px; }
   #signin-box .login-error a, #signin-box .login-error a:visited {
     color: #dd3c10; }
