Added icon to application_logo.slim. Removed link from logo in builder.slim

--- a/app/views/layouts/application_loco.slim
+++ b/app/views/layouts/application_loco.slim
@@ -17,6 +17,8 @@ html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0"
       <script src="/assets/ie9.js"></script>
       <![endif]-->
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
+    link[rel="shortcut icon" type="image/x-icon" href="/yomobi.ico"]
+    link[rel="canonical" href="http://www.yomobi.com"]
     link[href="/assets/reset.css" media="screen, projection" rel="stylesheet" type="text/css"]
     link[href="/assets/yomobi.screen.css" media="screen, projection" rel="stylesheet" type="text/css"]
     link[href="/assets/yomobi.print.css" media="print" rel="stylesheet" type="text/css"]
