--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -24,7 +24,7 @@ html lang="en-US"
     #global-container
       #header.signed-in
         .content
-          a#logo href=builder_main_path
+          a#logo
             img src="/images/yomobi-logo-20.png"
           = render :partial => 'shared/nav'
           .clearfix
