--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -254,6 +254,11 @@ p.success {
     background: #f2f2f2;
     border-top: 1px solid #cccccc; }
 
+.error_explanation h2 {
+    color: inherit;
+    font-size: 1.2 em;
+    border: none; }
+    
 .main-btn {
   background: #5b74a8;
   border: 1px solid;
