--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -285,7 +285,7 @@ p.success {
     background: #f2f2f2;
     border-top: 1px solid #cccccc; } }
 
-.error_explanation {
+#error_explanation {
   h2 {
     color: inherit;
     font-size: 1.2 em;
