Updated font size for error_explanation h2 in app.scss and app.css

--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -288,7 +288,7 @@ p.success {
 #error_explanation {
   h2 {
     color: inherit;
-    font-size: 1.2 em;
+    font-size: 14px;
     border: none; } }
 
 
