Updated yomobi.screen.sass to try and hide sms-text in narrow resolutions on a phone

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -132,6 +132,7 @@ li
     text-shadow: #AF5C2D 1px 1px 1px
   
   .sms-text
+    +hidden-320
     position: relative
     top: 55px
     left: 89px
@@ -917,7 +918,6 @@ form
 
 +res480
   +iphone-text-support
-  .sms-marketing
   .compare-table
     table
       margin-left: 3%
