Updated yomobi.screen.sass to add inherit-color class

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -61,10 +61,8 @@ a,
 .a
   color: $white
 
-li
-  a,
-  .a
-    color: inherit
+.inherit-color
+  color: inherit
   
 .large-link
   font-size: 2em
