--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -270,6 +270,7 @@ p.success {
     -webkit-margin-end: 0px;
     -webkit-padding-start: 40px; }
   h2 {
+    font-size: 2em;
     border-bottom: 1px solid #cccccc;
     padding-bottom: 4px;
     margin: 5px 0 5px 0; }
