--- a/public/stylesheets/site-manager.css
+++ b/public/stylesheets/site-manager.css
@@ -1,7 +1,7 @@
 input[type="button"], input[type="submit"], button {
   background: #5B74A8;
   padding: 2px 6px 3px;
-  border: 1px solid #5B74A8;
+  border: 1px solid #5b74a8;
   border-top-color: #8A9CC2;
   color: white;
   font-weight: bold;
@@ -79,7 +79,7 @@ h2.active-site {
     background: #E4EDF8;
     padding: 1px 10px 10px 10px;
     margin-bottom: 10px;
-    border: 2px solid #F39814;
+    border: 2px solid #f39814;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 6px; }
@@ -118,7 +118,7 @@ h2.active-site {
     display: none;
     overflow: hidden;
     clear: both;
-    border-bottom: 1px solid #B3B3B3; }
+    border-bottom: 1px solid #b3b3b3; }
     .accordian .content-body .error {
       margin-top: 10px; }
     .accordian .content-body .payment-complete {
