Updated CSS for test drive page.

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -312,13 +312,12 @@ a,
     .row-1
       display: block
       margin-top: 40px
-      width: 600px
+      max-width: 600px
     .sign
       margin: 0px 12px 0px 0px
       float: left
-      width: 256px
+      max-width: 256px
     .signup-link
-      width: 600px
     p
       text-align: justify
       font-size: 15px
