Add height options

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -10,7 +10,7 @@
       | <% }else{ %>
       .icon.dbx-handle{ style="background-image: url({{ iconName }});" }
       | <% } %>
-      .title {{ name }}
+      .title.dbx-handle {{ name }}
       .invalid-icon
 
   script.mapp-header(type="text/template")
