--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -1000,3 +1000,9 @@ button[name=pick_files] {
   cursor: pointer;
   padding: 1px 3px 1px 3px;
 }
+
+.display_style {
+  .height_options {
+    margin-top: 6px;
+  }
+}
