--- a/app/views/mobile/_custom-style.html.erb
+++ b/app/views/mobile/_custom-style.html.erb
@@ -60,6 +60,13 @@
   <% end %>
 }
 
+#canvas .home-icon .icon {
+  <% if @company.settings.in_line_mode? %>
+  width: <%= 57 * @company.settings.line_mode_icon_height / 100 %>px;
+  height: <%= 57 * @company.settings.line_mode_icon_height / 100 %>px;
+  <% end %>
+}
+
 #canvas .home-icon .title {
   <% if @company.settings.icon_font_family %>
   font-family: <%= @company.settings.icon_font_family %>;
@@ -67,6 +74,20 @@
 
   <% if @company.settings.icon_text_color %>
   color: <%= @company.settings.icon_text_color %>;
+  <% end %>
+
+  <% if @company.settings.in_line_mode? %>
+  font-size: <%= @company.settings.line_mode_font_size %>px;
+  line-height: <%= @company.settings.line_mode_line_height %>px;
+  <% end %>
+}
+
+.home-icon.invalid .invalid-icon {
+  <% if @company.settings.in_line_mode? %>
+  top: 0;
+  width: <%= @company.settings.invalid_icon_height %>px;
+  height: <%= @company.settings.invalid_icon_height %>px;
+  left: <%= @company.settings.invalid_icon_height %>px;
   <% end %>
 }
 
