Make sure multiline titles handled properly

--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -258,7 +258,7 @@ em {
   }
   .display_style_line .home-icon .title {
     float: left;
-    width: auto;
+    width: 220px;
     height: auto;
     text-align: left;
     margin-left: 10px;
