--- a/app/views/mobile/_custom-style.html.erb
+++ b/app/views/mobile/_custom-style.html.erb
@@ -78,6 +78,7 @@
 
   <% if @company.settings.in_line_mode? %>
   font-size: <%= @company.settings.line_mode_font_size %>px;
+  line-height: <%= @company.settings.line_mode_line_height %>px;
   <% end %>
 }
 
