--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -160,11 +160,12 @@ div.wysiwyg ul.toolbar {
 .home-icon.invalid {
   .invalid-icon {
     position: relative;
-    width: 32px;
-    height: 32px;
+    width: 23px;
+    height: 23px;
     top: -94px;
     left: 43px;
-    background: url(/images/ui/invalid-for-showing.png) no-repeat; } }
+    background: url(/images/ui/invalid-for-showing.png) no-repeat; 
+    background-size: contain; } }
 
 .home-icon.invalid.deactivated .invalid-icon {
   background-image: url(/images/ui/deactivated.png);
